--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,6 +1,5 @@
-<form action="/posts" method="post">
-	<input type="text" name="title" value="">
-	<textarea name="body" value="" cols="70" rows="10"></textarea>
+<form action="/posts/<%=@post.id%>/edit" method="post">
+	<input type="text" name="title" value="<%=@title%>">
+	<textarea name="body" cols="70" rows="10"><%=@body%></textarea>
 	<input type="submit">
 </form>
-<hr>
